# Frontierlens

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.js  compose.yaml  index.html  pyproject.toml  run.py  styles.css
.specify/: feature.json
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
backend/: __init__.py  sources.json
backend/frontierlens/: __init__.py  ai.py  audit.py  briefs.py  catalog.py  cli.py  config.py  database.py  discovery.py  knowledge.py  parser.py  server.py
docs/: architecture.md  product-experience.md  production.md
specs/001-contextual-knowledge-map/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-contextual-knowledge-map/checklists/: requirements.md
specs/001-contextual-knowledge-map/contracts/: knowledge-api.md
tests/: test_pipeline.py
