[project]
name = "frontierlens"
version = "0.2.0"
description = "Evidence-first AI frontier intelligence platform"
requires-python = ">=3.11"
dependencies = [
  "pypdf>=6.0,<7.0",
]

[project.scripts]
frontierlens = "backend.frontierlens.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/frontierlens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
